--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -21,8 +21,8 @@ on:
       - '.config'
   schedule:
     - cron: 0 0 * * 5
-  watch:
-    types: started
+  #watch:
+    #types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
