--- a/.github/workflows/RM2100.yml
+++ b/.github/workflows/RM2100.yml
@@ -21,8 +21,8 @@ on:
       - 'RM2100.config'
   schedule:
     - cron: 0 0 * * 5
-  watch:
-    types: started
+  #watch:
+    #types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -34,8 +34,8 @@ env:
   SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: true
-  UPLOAD_WETRANSFER: false
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: true
   TZ: Asia/Shanghai
 
 jobs:
