--- a/.github/workflows/G-DOCK.yml
+++ b/.github/workflows/G-DOCK.yml
@@ -18,8 +18,15 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+  push:
+    branches:
+      - main
+    paths:
+      - 'G-DOCK.config'        
   schedule:
     - cron: 0 1 * * 5
+  watch:
+    types: started      
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
