--- a/.github/workflows/G-DOCK.yml
+++ b/.github/workflows/G-DOCK.yml
@@ -19,7 +19,7 @@ on:
         required: false
         default: 'false'    
   schedule:
-    - cron: 0 0 * * 5
+    cron: 0 0 * * 5
   watch:
     types: started      
 
