--- a/.github/workflows/K2P32512USB.yml
+++ b/.github/workflows/K2P32512USB.yml
@@ -18,6 +18,11 @@ on:
         description: 'SSH connection to Actions'
         required: true
         default: 'false'
+  push:
+    branches:
+      - main
+    paths:
+      - 'K2P32512USB.config'           
   #schedule:
     #- cron: 0 0 * * 5
   watch:
