--- a/.github/workflows/G-DOCK-Boos4721.yml
+++ b/.github/workflows/G-DOCK-Boos4721.yml
@@ -18,8 +18,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-#  schedule:
-#    - cron: 0 8 * * 5
+  #schedule:
+    #- cron: 0 8 * * 5
   watch:
      types: started  
 
@@ -29,7 +29,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: R619AC128M-Boos4721.config
   DIY_P1_SH: diy-part1-Boos4721.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P2_SH: diy-part2-Boos4721.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
