Update and rename G-DOCK-x-wrt.yml to G-DOCK-kenzok8.yml

--- a/.github/workflows/G-DOCK-kenzok8.yml
+++ b/.github/workflows/G-DOCK-kenzok8.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: G-DOCK-x-wrt
+name: G-DOCK-kenzok8
 
 on:
   repository_dispatch:
@@ -24,12 +24,12 @@ on:
      types: started  
 
 env:
-  REPO_URL: https://github.com/x-wrt/x-wrt
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: R619AC128M-x-wrt.config
-  DIY_P1_SH: diy-part1-x-wrt.sh
-  DIY_P2_SH: diy-part2-x-wrt.sh
+  CONFIG_FILE: R619AC128M-kenzok8.config
+  DIY_P1_SH: diy-part1-kenzok8.sh
+  DIY_P2_SH: diy-part2-kenzok8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
