--- a/.github/workflows/CR660x-kenzok8.yml
+++ b/.github/workflows/CR660x-kenzok8.yml
@@ -27,9 +27,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: CR660x.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  CONFIG_FILE: CR660x-kenzok8.config
+  DIY_P1_SH: diy-part1-kenzok8.sh
+  DIY_P2_SH: diy-part2-kenzok8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
