--- a/.github/workflows/RM2100.yml
+++ b/.github/workflows/RM2100.yml
@@ -25,8 +25,8 @@ on:
       - 'RM2100.config'        
   #schedule:
    # - cron: 0 0 * * 5
-#  watch:
-#   types: started      
+  watch:
+   types: started      
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
